...
     "required": true,
     "order": 2,
     "dependsOn": [],
     "consentRequired": false,
     "options": [
      {
       "label": "Addis Ababa",
       "value": "addis_ababa"
      },
      {
       "label": "Oromia",
       "value": "oromia"
      },
      {
       "label": "Amhara",
       "value": "amhara"
      },
...
